# keylogger-rs

./: Cargo.toml
src/: event.rs  hook.rs  main.rs  safe_winapi.rs
