[package]
name = "keylogger-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
once_cell = "1.17.1"
phf = { version = "0.11.1", features = ["macros"] }

[dependencies.windows]
version = "0.44"
features = [
    "Win32_Foundation",
    "Win32_UI_TextServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "System",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
]
